r11753: 15 Jul 2007  Kevin Rosenberg <kevin@rosenberg.net>         * Version 3.8.5         * db-mysql/mysql-loader.lisp: Revert previous change since libmysql is         not dynamically loaded on Windows         * debian/control: Add libmysqlclient15-dev as dependency for cl-sql-mysql         since clsql-mysql modules depends on finding the .so files to load

--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Description: Common UFFI functions for CLSQL database backends
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql (>= ${source:Version}), cl-sql-uffi (>= ${source:Version}), ${shlibs:Depends}
+Depends: cl-sql (>= ${source:Version}), cl-sql-uffi (>= ${source:Version}), ${shlibs:Depends}, libmysqlclient15-dev
 Provides: cl-sql-backend
 Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
