convert to dh-lisp; add Vcs-Browser

--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,15 @@ Source: cl-sql
 Section: lisp
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kmr@debian.org>
-Build-Depends: debhelper (>= 7.0.0), libmysqlclient-dev, libpq-dev
+Build-Depends: dh-lisp, debhelper (>= 7.0.0), libmysqlclient-dev, libpq-dev
 Standards-Version: 3.8.2.0
 Homepage: http://clsql.b9.com/
 Vcs-Git: git://git.b9.com/clsql.git
+Vcs-Browser: http://git.b9.com/?p=clsql.git
 
 Package: cl-sql
 Architecture: all
-Depends: common-lisp-controller (>= 3.37) 
+Depends: ${misc:Depends}
 Recommends: cl-sql-backend
 Description: SQL Interface for Common Lisp
  CLSQL is a Common Lisp interface for multiple SQL databases
@@ -18,7 +19,7 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-uffi
 Architecture: any
-Depends: cl-uffi (>= 1.5.11), cl-sql (= ${source:Version}), ${shlibs:Depends}
+Depends: cl-uffi (>= 1.5.11), cl-sql (= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
 Recommends: cl-sql-backend
 Description: Common UFFI functions for CLSQL database backends
  This package provides an interface to several UFFI functions used by multiple
@@ -27,7 +28,7 @@ Description: Common UFFI functions for CLSQL database backends
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql (= ${source:Version}), cl-sql-uffi (= ${binary:Version}), ${shlibs:Depends}, libmysqlclient-dev
+Depends: cl-sql (= ${source:Version}), cl-sql-uffi (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, libmysqlclient-dev
 Provides: cl-sql-backend
 Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
@@ -36,7 +37,7 @@ Description: CLSQL database backend, MySQL
 
 Package: cl-sql-aodbc
 Architecture: all
-Depends: cl-sql (= ${source:Version}), cl-sql-mysql, cl-sql-postgresql
+Depends: cl-sql (= ${source:Version}), cl-sql-mysql, cl-sql-postgresql, ${misc:Depends}
 Provides: cl-sql-backend
 Suggests: acl-pro-installer
 Description: CLSQL database backend, AODBC
@@ -46,7 +47,7 @@ Description: CLSQL database backend, AODBC
 
 Package: cl-sql-odbc
 Architecture: all
-Depends: cl-sql (= ${source:Version}), unixodbc-dev, cl-sql-mysql, cl-sql-postgresql
+Depends: cl-sql (= ${source:Version}), unixodbc-dev, cl-sql-mysql, cl-sql-postgresql, ${misc:Depends}
 Provides: cl-sql-backend
 Suggests: acl-pro-installer
 Description: CLSQL database backend, ODBC
@@ -56,7 +57,7 @@ Description: CLSQL database backend, ODBC
 
 Package: cl-sql-postgresql
 Architecture: all
-Depends: cl-sql (= ${source:Version}), libpq-dev, cl-sql-uffi (>= ${source:Version})
+Depends: cl-sql (= ${source:Version}), libpq-dev, cl-sql-uffi (>= ${source:Version}), ${misc:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, PostgreSQL via library
  This package enables you to use the CLSQL data access package
@@ -65,7 +66,7 @@ Description: CLSQL database backend, PostgreSQL via library
 
 Package: cl-sql-postgresql-socket
 Architecture: all
-Depends: cl-sql (= ${source:Version}), cl-md5, cl-sql-uffi (>= ${source:Version}), libc6-dev
+Depends: cl-sql (= ${source:Version}), cl-md5, cl-sql-uffi (>= ${source:Version}), libc6-dev, ${misc:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, PostgreSQL via sockets
  This package enables you to use the CLSQL data access package
@@ -75,7 +76,7 @@ Description: CLSQL database backend, PostgreSQL via sockets
 
 Package: cl-sql-sqlite
 Architecture: all
-Depends: cl-sql (= ${source:Version}), libsqlite0-dev, cl-sql-uffi (>= ${source:Version})
+Depends: cl-sql (= ${source:Version}), libsqlite0-dev, cl-sql-uffi (>= ${source:Version}), ${misc:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, SQLite
  This package enables you to use the CLSQL data access package
@@ -84,7 +85,7 @@ Description: CLSQL database backend, SQLite
 
 Package: cl-sql-sqlite3
 Architecture: all
-Depends: cl-sql (= ${source:Version}), libsqlite3-dev, cl-sql-uffi (>= ${source:Version})
+Depends: cl-sql (= ${source:Version}), libsqlite3-dev, cl-sql-uffi (>= ${source:Version}), ${misc:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, SQLite3
  This package enables you to use the CLSQL data access package
@@ -94,7 +95,7 @@ Description: CLSQL database backend, SQLite3
 Package: cl-sql-oracle
 Section: contrib/lisp
 Architecture: all
-Depends: cl-sql (= ${source:Version}), cl-sql-uffi (>= ${source:Version})
+Depends: cl-sql (= ${source:Version}), cl-sql-uffi (>= ${source:Version}), ${misc:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, Oracle
  This package enables you to use the CLSQL data access package
@@ -103,7 +104,7 @@ Description: CLSQL database backend, Oracle
 
 Package: cl-sql-tests
 Architecture: all
-Depends: cl-sql, cl-sql-postgresql, cl-sql-postgresql-socket, cl-sql-mysql, cl-sql-sqlite, cl-sql-odbc, cl-rt
+Depends: cl-sql, cl-sql-postgresql, cl-sql-postgresql-socket, cl-sql-mysql, cl-sql-sqlite, cl-sql-odbc, cl-rt, ${misc:Depends}
 Suggests: acl-installer, libmyodbc, unixodbc,cl-sql-aodbc 
 Description: Testing suite for CLSQL
  This package contains a test suite for CLSQL. It requires manual
