ignore build errors for 32-bit libraries on Linux x64

--- a/db-mysql/Makefile
+++ b/db-mysql/Makefile
@@ -60,8 +60,8 @@ else
 	  ld -shared -soname=$(base) $(object) $(LDFLAGS) -o $(shared64_lib)
 	  rm $(object)
 	  @echo "Ensure that you have multiarch i386 build tools and libraries if you want to build 32-bit library"
-	  gcc $(CFLAGS32) -fPIC -c $(source) -o $(object)
-	  ld -shared -soname=$(base) $(object) $(LDFLAGS32) -o $(shared_lib)
+	  -gcc $(CFLAGS32) -fPIC -c $(source) -o $(object)
+	  -ld -shared -soname=$(base) $(object) $(LDFLAGS32) -o $(shared_lib)
         else
 	  gcc $(CFLAGS) -fPIC -c $(source) -o $(object)
 	  ld -shared -soname=$(base) $(object) $(LDFLAGS) -o $(shared_lib)
