--- a/uffi/Makefile
+++ b/uffi/Makefile
@@ -48,8 +48,8 @@ else
 	  ld -shared -soname=$(base) -lc $(object) -o $(shared64_lib)
 	  rm -f $(object)
 	  @echo "Ensure that you have multiarch i386 build tools if you want to build 32-bit library"
-	  gcc -m32 -fPIC -DPIC -c $(source) -o $(object)
-	  ld -melf_i386 -shared -soname=$(base) -lc $(object) -o $(shared_lib)
+	  -gcc -m32 -fPIC -DPIC -c $(source) -o $(object)
+	  -ld -melf_i386 -shared -soname=$(base) -lc $(object) -o $(shared_lib)
         else
 	  gcc -fPIC -DPIC -c $(source) -o $(object)
 	  ld -shared -soname=$(base) -lc $(object) -o $(shared_lib)
