--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,4 +1,5 @@
-##############################################################################
+#!/usr/bin/make
+###############################################################################
 # FILE IDENTIFICATION
 # 
 #  Name:         Makefile
@@ -6,14 +7,12 @@
 #  Programer:    Kevin M. Rosenberg
 #  Date Started: Mar 2002
 #
-#  CVS Id:   $Id$
-#
-# This file, part of CLSQL, is Copyright (c) 2002-2003 by Kevin M. Rosenberg
+# This file, part of CLSQL, is Copyright (c) 2002-2010 by Kevin M. Rosenberg
 #
 # CLSQL users are granted the rights to distribute and use this software
 # as governed by the terms of the Lisp Lesser GNU Public License
 # (http://opensource.franz.com/preamble.html), also known as the LLGPL.
-##############################################################################
+###############################################################################
 
 DOCFILE_BASE_DEFAULT:=clsql
 DOCFILE_EXT_DEFAULT:=xml
