Support Snow Leopard by generating universal (x86_64,i386) dylib bundles)

--- a/db-mysql/Makefile
+++ b/db-mysql/Makefile
@@ -21,7 +21,7 @@ source=$(base).c
 object=$(base).o
 shared_lib=$(base).so
 shared64_lib=$(base)64.so
-
+dylib=$(base).dylib
 
 .PHONY: all
 all: $(shared_lib)
@@ -46,10 +46,13 @@ else
 	cc $(CFLAGS) -KPIC -c $(source) -o $(object)
 	cc -G $(object) $(LDFLAGS) -o $(shared_lib)
   else
+    ifneq ($(OS_DARWIN64),0)
+	cc $(CFLAGS) -arch x86_64 -arch i386 -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress $(source) -o $(dylib)
+	cc -arch x86_64 -arch i386 -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress /usr/lib/libz.dylib -o z.dylib
+    else
     ifneq ($(OS_DARWIN),0)
-	cc $(CFLAGS) -dynamic -c $(source) -o $(object)
-	ld -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress -o $(base).dylib $(object)
-	ld -bundle /usr/lib/bundle1.o $(LDFLAGS) -flat_namespace -undefined suppress /usr/lib/libz.dylib -o z.dylib
+	cc $(CFLAGS)  -arch x86_64 -arch i386 -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress $(source) -o $(dylib)
+	cc -arch x86_64 -arch i386 -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress /usr/lib/libz.dylib -o z.dylib
     else
       ifneq ($(OS_CYGWIN),0)
 	gcc $(CFLAGS) -DWIN32 -c $(source) -o $(object)
@@ -70,8 +73,9 @@ else
     endif
   endif
 endif
+endif
 	rm -f $(object)
 
 .PHONY: distclean
 distclean: clean
-	rm -f $(base).dylib $(base).dylib $(base).so $(base).o
+	@rm -f $(dylib) $(shared_lib) $(shared64_lib) $(object) z.dylib
