--- a/Makefile.common
+++ b/Makefile.common
@@ -5,7 +5,11 @@ DARWIN_LIBC=$(shell file /usr/lib/libc.dylib)
 OS_AIX=$(shell expr "$(UNAME)" : '.*AIX.*')
 OS_SUNOS=$(shell expr "$(UNAME)" : '.*SunOS.*')
 OS_DARWIN=$(shell expr "$(UNAME)" : '.*Darwin.*')
-OS_DARWIN64=$(shell expr "$(DARWIN_LIBC)" : '.*x86_64.*')
+ifneq ($(OS_DARWIN),0) 
+  OS_DARWIN64=$(shell expr match "$(DARWIN_LIBC)" '.*x86_64.*')
+else
+  OS_DARWIN64=0
+endif
 OS_CYGWIN=$(shell expr "$(UNAME)" : '.*CYGWIN.*')
 OS_LINUX=$(shell expr "$(UNAME)" : '.*Linux.*')
 OS_LINUX64=$(shell expr "$(UNAME_A)" : '.*Linux.*x86_64.*')
